Internal model are now records with lombok builder, null lists are initialized with empty lists